--- a/electron/electron-builder.yml
+++ b/electron/electron-builder.yml
@@ -33,6 +33,9 @@ mac:
 
 linux:
     category: Utility
+    mimeTypes: [x-scheme-handler/'GitStart DevTime'] # Define MimeType
+    desktop:
+        exec: 'GitStart DevTime'
     target:
         - AppImage
         - deb
