--- a/electron/package.json
+++ b/electron/package.json
@@ -31,6 +31,7 @@
         "csv-stringify": "^5.5.3",
         "eiphop": "^1.0.13",
         "electron-context-menu": "2.3.0",
+        "electron-deeplink": "^1.0.6",
         "electron-is-dev": "^1.2.0",
         "electron-log": "^4.3.5",
         "electron-store": "6.0.1",
@@ -68,7 +69,7 @@
         "cucumber": "^6.0.5",
         "cucumber-pretty": "^6.0.0",
         "dotenv-webpack": "^6.0.0",
-        "electron": "13",
+        "electron": "^13.1.2",
         "electron-builder": "22.11.5",
         "electron-connect": "0.6.3",
         "electron-devtools-installer": "^3.1.1",
