--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
         "less": "^3.13.1",
         "less-loader": "^6.2.0",
         "lodash": "4.17.19",
+        "logdna": "^3.5.2",
         "loglevel": "^1.6.6",
         "moment": "^2.24.0",
         "moment-duration-format": "2.3.2",
