--- a/electron/package.json
+++ b/electron/package.json
@@ -42,6 +42,7 @@
         "knex": "^0.21.13",
         "knex-webpack-migration-source": "^1.0.0",
         "lodash": "^4.17.20",
+        "logdna": "^3.5.2",
         "menubar": "9.0.1",
         "moment": "2.29.1",
         "node-fetch": "^2.6.1",
