refactor changes in vs code settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
     "cSpell.words": ["reflexbox"],
-    "editor.detectIndentation": true,
-    "window.title": "${activeEditorShort}${separator}${rootName} ${separator} [Branch: automatic-creation-of-user_work_logs]"
+    "editor.detectIndentation": true
 }
